[package]
name = "workshop"
version = "0.1.0"
edition = "2021"

[dependencies]
swh-graph = { path = "/home/matay/swh-environment/swh-graph/rust/" }
# argument parser
clap = { version = "4.1.6", features = ["derive"] }
# error handling boilerplate
anyhow = {version="1.0.79", features=["backtrace"]}
# logging
dsi-progress-logger = "0.1.0"
log = "0.4.17"
stderrlog = "0.5.4"

# data structures
bitvec = { version = "1.0.1", features = ["atomic"] }
[profile.release] # Used for the examples
opt-level = 3
lto = "fat"
overflow-checks = false
debug = true
debug-assertions = false
codegen-units=1


