[package]
name = "workshop"
version = "0.1.0"
edition = "2021"

[dependencies]
swh-graph = { path = "/home/matay/swh-environment/swh-graph/rust/", features = ["dataset-writer", "serde"] }
# argument parser
clap = { version = "4.1.6", features = ["derive"] }
# error handling boilerplate
anyhow = {version="1.0.79", features=["backtrace"]}
# logging
log = "0.4.17"
stderrlog = "0.5.4"
csv = "1.3.0"
dsi-progress-logger = "0.2.3"
itertools = { version = "0.11.0" }
rayon = { version = "1.9.0" }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.14"

[profile.release] # Used for the examples
opt-level = 3
lto = "fat"
overflow-checks = false
debug = true
debug-assertions = false
codegen-units=1




